; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/fxp/extr_if_fxp.c_fxp_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/fxp/extr_if_fxp.c_fxp_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fxp_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @fxp_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fxp_start(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fxp_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.fxp_softc* @if_getsoftc(i32 %4)
  store %struct.fxp_softc* %5, %struct.fxp_softc** %3, align 8
  %6 = load %struct.fxp_softc*, %struct.fxp_softc** %3, align 8
  %7 = call i32 @FXP_LOCK(%struct.fxp_softc* %6)
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @fxp_start_body(i32 %8)
  %10 = load %struct.fxp_softc*, %struct.fxp_softc** %3, align 8
  %11 = call i32 @FXP_UNLOCK(%struct.fxp_softc* %10)
  ret void
}

declare dso_local %struct.fxp_softc* @if_getsoftc(i32) #1

declare dso_local i32 @FXP_LOCK(%struct.fxp_softc*) #1

declare dso_local i32 @fxp_start_body(i32) #1

declare dso_local i32 @FXP_UNLOCK(%struct.fxp_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
